--- a/app/src/main/res/layout/fragment_appointment.xml
+++ b/app/src/main/res/layout/fragment_appointment.xml
@@ -3,13 +3,37 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".patient.AppointmentFragment">
 
-
-    <ListView
-        android:id="@+id/listAppointment"
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="@string/list_appointment"
+        android:gravity="center"
+        android:textSize="30sp"
+        android:layout_margin="@dimen/all"
+
+        />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/press_for_more_details"
+        android:gravity="center"
+        android:textSize="18sp"
+        android:layout_marginBottom="@dimen/all"
+        />
+    <ListView
+        android:id="@+id/listAppointment"
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/eggshell"
+        android:dividerHeight="10dp"
+        android:divider="@color/white"
+        android:elevation="@dimen/top"
+        android:layout_margin="20dp"
+        android:paddingTop="10dp"
         />
 
 </LinearLayout>
