--- a/app/src/main/res/layout/fragment_appointment_admin.xml
+++ b/app/src/main/res/layout/fragment_appointment_admin.xml
@@ -6,12 +6,32 @@
     android:orientation="vertical"
     tools:context=".admin.AppointmentAdminFragment">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/list_appointment"
+        android:gravity="center"
+        android:textSize="30sp"
+        android:layout_margin="@dimen/all"
 
+        />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/appointment_press_admin"
+        android:gravity="center"
+        android:textSize="18sp"
+        />
     <ListView
         android:id="@+id/listAppointmentAdmin"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="50dp"/>
+        android:layout_height="wrap_content"
+        android:background="@color/eggshell"
+        android:dividerHeight="10dp"
+        android:divider="@color/white"
+        android:elevation="@dimen/top"
+        android:layout_margin="20dp"
+        android:paddingTop="10dp"/>
 
 
 </LinearLayout>
