--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,22 +8,26 @@
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:src="@mipmap/ic_logo_app_round"
+        android:layout_height="300dp"
+        android:layout_marginTop="@dimen/top"
+        android:layout_marginBottom="@dimen/top"
+        android:backgroundTint="@color/ic_launcher_background"
+        android:src="@drawable/ic_launcher_round"
         />
     <TextView
         android:layout_width="match_parent"
         android:gravity="center"
         android:textSize="20dp"
         android:textStyle="bold"
+        android:textColor="@color/teal_700"
         android:layout_height="wrap_content"
         android:text="@string/home_head"
         />
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:textSize="16dp"
+        android:layout_height="wrap_content"
+        android:textSize="18sp"
         android:padding="10dp"
         android:text="@string/home_body" />
 
