--- a/app/src/main/res/layout/fragment_add_appointment.xml
+++ b/app/src/main/res/layout/fragment_add_appointment.xml
@@ -12,9 +12,9 @@
         android:textSize="24sp"
         android:layout_height="wrap_content"
         android:text="@string/add_appointment"
-        android:background="@color/teal_700"
-        android:textColor="@color/white"
+        android:textColor="@color/teal_700"
         android:layout_marginBottom="5mm"
+        android:layout_margin="@dimen/all"
         />
 
     <TextView
@@ -25,6 +25,10 @@
         android:gravity="center"
         android:layout_marginBottom="5mm"
         android:textSize="20sp"
+        android:background="@android:drawable/btn_dropdown"
+        android:textColor="@color/black"
+        android:layout_margin="@dimen/all"
+        android:padding="5dp"
         />
 
 
@@ -35,12 +39,14 @@
         android:layout_marginBottom="3mm"
         android:hint="@string/reason"
         android:inputType="text"
-        android:minHeight="48dp" />
+        android:minHeight="48dp"
+        android:layout_margin="@dimen/all"/>
 
     <Button
         android:id="@+id/btnSaveAppointment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/save"
+        android:layout_margin="@dimen/all"
         />
 </LinearLayout>
