--- a/app/src/main/res/layout/fragment_consultation.xml
+++ b/app/src/main/res/layout/fragment_consultation.xml
@@ -3,14 +3,38 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".patient.ConsultationFragment"
     >
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/list_consultation"
+        android:gravity="center"
+        android:textSize="30sp"
+        android:layout_margin="@dimen/all"
+
+        />
+    <TextView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="@string/press_for_more_details"
+    android:gravity="center"
+    android:textSize="18sp"
+    />
 
     <ListView
         android:id="@+id/listConsultation"
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/eggshell"
+        android:dividerHeight="10dp"
+        android:divider="@color/white"
+        android:elevation="@dimen/top"
+        android:layout_margin="20dp"
+        android:paddingTop="10dp"
         />
 
 </LinearLayout>
