--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,9 +6,9 @@
         <item name="colorPrimaryVariant">@color/deep_space</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/eggshell</item>
-        <item name="colorSecondaryVariant">@color/sage</item>
-        <item name="colorOnSecondary">@color/teal_700</item>
+        <item name="colorSecondary">@color/black</item>
+        <item name="colorSecondaryVariant">@color/deep_space</item>
+        <item name="colorOnSecondary">@color/eggshell</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
